--- a/design.css
+++ b/design.css
@@ -1,5 +1,5 @@
 :root {
-    --bg: #B45309;
+    --bg: #BFDBFE;
 }
 
 * {
@@ -13,7 +13,7 @@ body {
     padding-left: 30%;
     padding-right: 30%;
     background-color: var(--bg);
-    color: bisque;
+    color: #475569;
 }
 
 .container {
@@ -29,7 +29,7 @@ body {
 .description {
     padding: 0.4rem;
     ;
-    color: bisque;
+    color: #475569;
     font-size: 1.1rem;
     opacity: 0.7;
     text-align: center;
@@ -48,18 +48,19 @@ input {
     margin: auto;
     height: 2rem;
     font-size: 1.5rem;
-    background-color: bisque;
+    background-color: whitesmoke;
     color: var(--bg);
 }
 
 #check-button {
+    font-weight: bolder;
     margin-top: 2rem;
     margin-bottom: 1.5rem;
     width: 60%;
     padding: 0.7rem 0.3rem;
     margin-left: auto;
     margin-right: auto;
-    background-color: bisque;
+    background-color: whitesmoke;
     border-radius: 0.5rem;
     font-size: 1rem;
     display: block;
@@ -80,12 +81,12 @@ td,
 th {
     padding: 1rem;
     border: 0.1rem solid var(--bg);
-    background-color: bisque;
+    background-color: #475569;
     color: var(--bg);
     font-size: large;
 }
 
-.titie-colore {
+.title-color {
     color: var(--primary-color);
 }
 
@@ -100,15 +101,15 @@ th {
 
 .list-item-inline {
     display: inline;
-    padding: 0rem 1rem;
+    padding: 0rem 0.5rem;
 }
 
 .footer {
-    background-color: bisque;
+    background-color: black;
     color: var(--bg);
-    padding: 1rem 05rem;
+    padding: 2rem 1rem;
     text-align: center;
-    font-size: large;
+    border-top-right-radius: 1rem;
 }
 
 .footer .link {
